# minima

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  minima.md  minima_spec_1.4.md  sample_code.txt
src/: common.h  main.c  mi_bytecode.c  mi_cli.c  mi_cli.h  mi_cmd.c  mi_cmd.h  mi_compile.c  mi_compile.h  mi_eval_ast.c  mi_eval_ast.h  mi_fold.c  mi_heap.c  mi_heap.h  mi_log.h  mi_mix.c  mi_mix.h  mi_mx.c  mi_mx.h  mi_parse.c  mi_parse.h  mi_runtime.c  mi_runtime.h  mi_typecheck.c  mi_typecheck.h  mi_version.h  mi_vm.c  mi_vm.h  minima.c  minima.h  minima_array.h  minima_ast.c  minima_ast.h  minima_common.c  minima_common.h  minima_eval.c  minima_eval.h  minima_parser.c  minima_runtime.c  minima_runtime.h  (+2 more)
src/bkp/: main.c  mi_bytecode.h  mi_compile.h  mi_eval_ast.c  mi_fold.h  mi_heap.c  mi_mx.c  mi_parse.c  mi_parse.h  mi_runtime.c  mi_vm.c  mi_vm.h  mi_vm_compile.c  minima.h
src/include/: stdx_filesystem.h
src/module/core/: mi_core.c  mi_core_float.c  mi_core_float.h  mi_core_int.c  mi_core_int.h
src/test/: tests.mi
src/test/includes/: util.mi
test/: tests.mi
